- Fixed bug #46665 (Triggering autoload with a variable classname causes truncated autoload param)